2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Class.java (newInstance): 
	Improved exception messages.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/net/PlainSocketImpl.c (gnu_java_net_PlainSocketImpl_socketAccept): 
	Improved debug code.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c (jthreadedAccept): 
	Fixed accept again for the case that select was interrupted.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/compat/javac.in: Switched to use jikes
	with correct bootclasspath.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* config/s390/sysdepCallMethod.h: Added missing semicolon.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Use a single AC_CHECK_HEADERS macro
	to reduce the bloat in the configure script.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/javac.in,
	kaffe/scripts/javakey.in,
	kaffe/scripts/jdb.in,
	kaffe/scripts/kjc.in,
	kaffe/scripts/kopi.in:
	Removed unused scripts or scripts using sun.* classes.

	* kaffe/scripts/Makefile.am,
 	configure.ac: Removed the deleted files.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

        * configure.ac: Added PTHREAD_CFLAGS to CFLAGS back. 
	That fixes FreeBSD again. 'make CFLAGS=-Wall' still works now,
	though.

	* kaffe/kaffevm/Makefile.am (libkaffevm_la_LDFLAGS):
	Added PTHREAD_CFLAGS.

	* kaffe/kaffevm/systems/unix-pthreads/Makefile.am (libkthread_la_LDFLAGS):
	Added PTHREAD_CFLAGS.

	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>

2005-02-08  Jim Huang  <jserv@kaffe.org>

	* WHATSNEW: Add some successes.
	
	* FAQ/FAQ.awt: Add entry to Nano-X AWT backend.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Updated.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2005-02-08  Dalibor Topic  <robilad@kaffe.org>

	Fixed make distcheck. Removed remaining jar files from tarball.
