@@ -1,5 +1,10 @@
 2005-02-10  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/lang/Thread.java (sleep): Improved
+	exception messages.
+
+2005-02-10  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/lang/Class.java (newInstance): 
 	Improved exception messages.
 
